@@ -5,3 +5,9 @@ Current Developer:
 Founder and Lead Developer:
 ----------------------------------------------------------------------------
     Bradley Smith  <brad@brad-smith.co.uk> (United Kingdom)
+
+Contributors
+----------------------------------------------------------------------------
+    Francisco Licerán <francisco@intelligenia.com>
+    Mario J. Barchéin <mario@intelligenia.com>
+    Oscar Fernandez <oscaretu@gmail.com>
