@@ -2,6 +2,8 @@
 
     Added patch from Oscar Fernandez to support comments on configuration archive
 
+    Added patch from Mario J. Barchéin and Francisco Licerán to support port numbers on host
+
 2014-01-15  Héctor García  <hector@debian.org>
 
     Bumped version to 1.3 gtk2 deprecated symbols free
